Tue Mar 29 06:40:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_compile_err_append): rb_thread_t::base_block is no
	  longer used.

	* iseq.c (rb_iseq_compile_with_option): ditto, no protection is
	  needed.

Tue Mar 29 06:39:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (struct parser_params): move parse_in_eval flag from
	  rb_thread_t.

	* parse.y (rb_parser_set_context): set parsing context, not only
	  mild error flag.

	* iseq.c (rb_iseq_compile_with_option): the parser now refers no
	  thread local states to be restored.

	* vm_eval.c (eval_string_with_cref): ditto.

Mon Mar 28 21:24:02 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* numeric.c (int_pos_p): fix typos.

Mon Mar 28 14:54:49 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Refactoring in preparation for data reduction for
	  titlecase.

Mon Mar 28 14:36:36 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Minor refactoring for I WITH DOT ABOVE.

Mon Mar 28 14:26:24 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Removed code now covered by data from table.

Mon Mar 28 11:49:21 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Adding comments. [ci skip]

Mon Mar 28 11:30:23 2016  Shinichi Maeshima  <netwillnet@gmail.com>

	* lib/rubygems.rb: Fix `Gem.find_spec_for_exe` picks oldest gem.
	  https://github.com/travis-ci/travis-ci/issues/5798
	  https://github.com/rubygems/rubygems/pull/1566
	* test/rubygems/test_gem.rb: ditto.

Mon Mar 28 11:26:31 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update rubygems-2.6.2.
	  Please see entries of 2.6.2 on
	  https://github.com/rubygems/rubygems/blob/master/History.txt

Mon Mar 28 11:02:31 2016  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* lib/rubygems/test_case.rb: Fix test on Windows for inconsistent temp path.
	  https://github.com/rubygems/rubygems/pull/1554
	  [Bug #12193][ruby-core:74431]
